fixtures/logs/build_err_no_matching_function.txt
$ cmake --build build -j
[ 50%] Building CXX object CMakeFiles/reduce.dir/src/reduce.cpp.o
/workspace/repo/src/reduce.cpp:63:3: error: no matching function for call to 'hipMemcpy'
   63 |   hipMemcpy(d_out, h_out, hipMemcpyDeviceToHost);
      |   ^~~~~~~~~
/opt/rocm/include/hip/hip_runtime_api.h:3721:12: note: candidate function not viable: requires 4 arguments, but 3 were provided
 3721 | hipError_t hipMemcpy(void* dst, const void* src, size_t sizeBytes, hipMemcpyKind kind);
      |            ^
1 error generated when compiling for gfx942.
make[2]: *** [CMakeFiles/reduce.dir/build.make:76: CMakeFiles/reduce.dir/src/reduce.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/reduce.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
